[package]
name = "quad-snd"
version = "0.2.3"
authors = ["Fedor Logachev <not.fl3@gmail.com>", "Jakob Meier <comcloudway@ccw.icu>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Low level and cross platform audio library"

[target.'cfg(target_os = "android")'.dependencies]
audir-sles = "0.1.0"

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd"))'.dependencies]
libc = "0.2"
alsa = "0.4.3"
alsa-sys = "*"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.8", features = ["debug", "ksmedia", "audioclient", "combaseapi", "coml2api", "devpkey", "handleapi", "mmdeviceapi", "objbase", "unknwnbase", "winerror", "synchapi", "winbase"] }

#[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
[patch.crates-io]
ndk      = { git = "https://github.com/nikita-skobov/android-ndk-rs", branch = "miniglue" }
ndk-glue = { git = "https://github.com/nikita-skobov/android-ndk-rs", branch = "miniglue" }
